fixed remind me form css to work on ios and mac

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,7 @@ a {
 }
 
 .timeForm {
-  width: 32.3%;
+  width: 32%;
   display: inline;
 }
 
